# esp3201-public

./: README.md
evaluation_harness/: README.md  pyproject.toml
evaluation_harness/esp3201_eval/: __init__.py  cli.py  report.py
evaluation_harness/esp3201_eval/data/: week03_groundtruth.json  week08_groundtruth.json
evaluation_harness/esp3201_eval/tasks/: __init__.py  base.py  week03_perception_shift.py  week08_latency_accuracy.py
evaluation_harness/examples/: README.md  week03_example_submission.json  week08_example_submission.json
evaluation_harness/tests/: test_week03.py  test_week08.py
labs/week05_embodied_system_critique/checks/: smoke_test_video.py  smoke_test_vlm.py
labs/week05_embodied_system_critique/rollout_bank/: README.md
labs/week05_embodied_system_critique/starter/: README.md  generate_rollout_bank.py  pinned_models.md  requirements.txt  video_eval.py  vlm_lab.py
mini_assignments/week03_perception_shift_analysis/: model_list.md
mini_assignments/week03_perception_shift_study/: README.md  perception_packet.md
mini_assignments/week03_perception_shift_study/data/: synthesize_dataset.py
mini_assignments/week03_perception_shift_study/starter/: README.md  plot_report.py  run_hog_baseline.py  run_pretrained_template.py
mini_assignments/week04_planner_tradeoff_study/checks/: smoke_test.py
mini_assignments/week04_planner_tradeoff_study/starter/: README.md  reference_output.md  requirements.txt  search_lab.py
mini_assignments/week09_agent_safety_case_colab/: README.md  grading_rubric.md  submission_template.md
(+32 files in other folders)
