[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "esp3201_eval"
version = "0.1.0"
description = "ESP3201 evaluation harness for auto-graded mini-assignment submissions."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
esp3201-eval = "esp3201_eval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["esp3201_eval*"]

[tool.setuptools.package-data]
esp3201_eval = ["data/*.json"]
